# cmg-10m-thermal

./: Makefile  README.md  deploy.py  install_deps.sh  requirements.txt
c/: IMPROVE.md  Makefile  README.md
c/include/: common.h  json_utils.h  signals.h  thermo.h  utils.h
c/include/commands/: get.h
c/scripts/: deploy_rpi.py
c/src/: bridge.c  commands.c  common.c  config.c  hardware.c  json_utils.c  main.c  signals.c  utils.c
c/src/commands/: get.c  set.c
include/: common.h  hardware.h  utils.h
python/: .gitignore  pyproject.toml  requirements.txt
python/scripts/: deploy_rpi.py
python/thermo/: __init__.py  bridge.py  config.py  hardware.py  main.py
scripts/: deploy_rpi.py  monitor.py  test.sh
src/: bridge.c  common.c  hardware.c  json_utils.c  main.c  utils.c
thermo-cli/include/: board_manager.h  bridge.h  json_utils.h
thermo-cli/include/commands/: fuse.h  get.h  init_config.h  list.h  set.h
thermo-cli/src/: board_manager.c
thermo-cli/src/commands/: get.c  init_config.c  list.c
